--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "npx vercel dev",
     "deploy": "npx vercel --prod",
-    "build": "",
+    "build": "echo ''",
     "dev": "",
     "lint": "npx eslint src/**/*.js",
     "test": "echo \"Error: no test specified\" && exit 1"
