--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
   "cleanUrls": true,
   "framework": null,
-  "outputDirectory": "."
+  "outputDirectory": ".",
+  "rewrites": [
+    { "source": "/.well-known/webfinger", "destination": "/.well-known/webfinger.json" }
+  ]
 }
