Allow CORS for .well-known

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,17 @@
   "cleanUrls": true,
   "framework": null,
   "outputDirectory": ".",
+  "headers": [
+    {
+      "source": "/.well-known/*",
+      "headers" : [
+        {
+          "key" : "Access-Control-Allow-Origin",
+          "value" : "*"
+        }
+      ]
+    }
+  ],
   "rewrites": [
     { "source": "/.well-known/webfinger", "destination": "/.well-known/webfinger.json" }
   ]
