--- a/vercel.json
+++ b/vercel.json
@@ -4,16 +4,19 @@
   "outputDirectory": ".",
   "headers": [
     {
-      "source": "/.well-known/*",
+      "source": "/.well-known/(.*)",
       "headers" : [
-        {
-          "key" : "Access-Control-Allow-Origin",
-          "value" : "*"
+        { 
+          "key": "Access-Control-Allow-Origin", 
+          "value": "*" 
         }
       ]
     }
   ],
   "rewrites": [
-    { "source": "/.well-known/webfinger", "destination": "/.well-known/webfinger.json" }
+    { 
+      "source": "/.well-known/webfinger", 
+      "destination": "/.well-known/webfinger.json" 
+    }
   ]
 }
