--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,7 @@
 name = "scio-space"
-compatibility_date = "2024-09-25"
-assets = {
-  directory = "./"
-}
+compatibility_date = "2025-09-24"
+
+[assets]
+directory = "./"
+# not_found_handling = "404-page"
+html_handling = "auto-trailing-slash"
